# web_page_filet_mignon

./: .gitignore  .gitmodules  Agents.md  Cargo.toml  LICENSE  README.md  clippy.toml  justfile
crates/engine_logging/: Cargo.toml
crates/engine_logging/src/: lib.rs
crates/harvester_app/: Cargo.toml
crates/harvester_app/src/: main.rs
crates/harvester_app/src/platform/: app.rs  effects.rs  logging.rs  mod.rs  persistence.rs
crates/harvester_app/src/platform/ui/: constants.rs  layout.rs  mod.rs  render.rs
crates/harvester_core/: Cargo.toml
crates/harvester_core/src/: effect.rs  lib.rs  msg.rs  state.rs  update.rs  view_model.rs
crates/harvester_core/tests/: persistence.rs  update_behaviour.rs  update_jobs.rs  update_noop.rs
crates/harvester_engine/: Cargo.toml
crates/harvester_engine/src/: convert.rs  decode.rs  engine.rs  export.rs  extract.rs  fetch.rs  filename.rs  frontmatter.rs  lib.rs  links.rs  persist.rs  preview.rs  token.rs  types.rs
crates/harvester_engine/tests/: converter_links.rs  extract_convert.rs  fetch.rs  output.rs  persist.rs
docs/: ApplicationDescription.md  DarkTheme.md  DarkTheme_ImplementationPlan.md  Plan.BarSplitter.md  Plan.Dropbox.md  Plan.ExtractLinksAndCleanMarkdown.md  Plan.LinksTreeViewMarkers.md  Plan.Main.md  Plan.MarkdownPreviewPane.md  ProjectConcept.md
