[package]
name = "harvester_app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
harvester_core = { path = "../harvester_core" }
harvester_engine = { path = "../harvester_engine" }
engine_logging = { path = "../engine_logging" }
commanductui = { path = "../../src/CommanDuctUI" }
log.workspace = true
simplelog.workspace = true
chrono = { version = "0.4", features = ["clock"] }
