[package]
name = "harvester_engine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1"
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tokio-util = "0.7"
html2md = "0.2"
scraper = "0.25.0"
encoding_rs = "0.8"
chardetng = "0.1"
thiserror = "2"
sha2 = "0.10"
tempfile = "3"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
wiremock = "0.6"
pretty_assertions = "1"
